# MUS-Agent-TUI-ai

./: .gitignore  LICENSE-MIT  README.md  concept_data.tsv  generate_dataset.py  lightning_setup.sh  prepare_dataset.py
.github/workflows/: build.yml  cloud-train.yml  release-weights.yml
data/tokenizer/: bpe_tokenizer.json
mus-associative-core/: Cargo.toml  build.rs  concept_data.tsv
mus-associative-core/include/: mus_associative.h
mus-associative-core/src/: ascii_3d.rs  assoc_tui.rs  blackboard.rs  coder.rs  cuda_bridge.rs  data.rs  executor.rs  graph.rs  hdc.rs  hebbian.rs  linter.rs  main.rs  metrics.rs  reward.rs  style_lsh.rs  thinker.rs  tui.rs  vox_core.rs  wasm_sandbox.rs
mus-associative-core/src/native/: bridge.cu  graph_kernels.cu
mus-core-rust/: Cargo.toml  build.rs  kaggle_train.ipynb
mus-core-rust/include/: mus_audio.h  mus_cuda.h  mus_model.h  mus_tokenizer.h
mus-core-rust/src/: lib.rs  main.rs
mus-core-rust/src/native/: bridge.cu  kernels.cu  kernels_f16.cu
mus-cuda/: CMakeLists.txt  MEMORY_OPTIMIZATION.md  README.md  convert_russian_data.py  decode_tokens.py  lightning_run.sh  tokenizer_test
mus-cuda/include/: mus_cuda.h  mus_model.h  mus_tokenizer.h  mus_vision.h
mus-cuda/scripts/: cloud_train.sh  colab_notebook.py  colab_pipeline.sh  colab_train.ipynb  download_weights.sh  kaggle_notebook.py  kaggle_pipeline.sh  kaggle_train.py  preprocess_jsonl.py  preprocess_photos.py  upload_to_hf.py
mus-cuda/src/: data_loader.cu  debug_loss.cu  debug_test.cu  gemm_test.cu  kernels.cu  kernels_f16.cu  main.cpp  memory_analysis.cu  nan_test.cu  quick_test.cu  test_forward_only.cu  tokenizer.cpp  tokenizer_test.cpp  train.cu  train_1660ti.cu  train_1b_multimodal.cu  train_4_6gb.cu  train_f16.cu  train_h100.cu  train_optimized_8gb.cu
mus-tui/: Cargo.toml
mus-tui/src/: main.rs
mus-vision/: Cargo.toml  pyproject.toml
mus-vision/python/mus_vision/: __init__.py  _core.cp311-win_amd64.pyd  _core.pyd  ascii_tokenizer.py  canvas.py  config.py  core.py  cpp_tokenizer.py
mus-vision/src/: ascii_tokenizer.rs  canvas.rs  cpp_tokenizer.rs  lib.rs  renderer.rs
mus-vision/tests/: smoke.py  test_core.py  test_tokenizer.py  vision_train.py
tests/: test_data_loader.py
