[package]
name = "uragan-vision-core"
version = "1.0.0"
edition = "2021"
description = "Uragan 1.0 — C++ Vision Tokenizer Core (Rust/PyO3)"

[lib]
name = "uragan_vision_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
