[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "mus-vision"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pillow",
    "torch>=2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mus_vision._core"
