[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "uragan-vision"
version = "1.0.0"
description = "Uragan 1.0 — C++ Vision Tokenizer"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pillow",
    "torch>=2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mus_vision._core"
